{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 83,
  "lineage": "d3928253-d599-2333-4818-807ad90ad5a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7a79277a447eb6d",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-019f91891a5940c8c",
            "domain": "vpc",
            "id": "eipalloc-0a7a79277a447eb6d",
            "instance": "i-0a70584ebc4e65a27",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c0778df7d72ea94c",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-44-205-29-234.compute-1.amazonaws.com",
            "public_ip": "44.205.29.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main-gateway",
            "aws_network_interface.ni",
            "aws_security_group.sgroup",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:230604829846:instance/i-0a70584ebc4e65a27",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a70584ebc4e65a27",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0c0778df7d72ea94c"
              }
            ],
            "primary_network_interface_id": "eni-0c0778df7d72ea94c",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "44.205.29.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c4e5a9fd4362f399",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043cd8bcfd11a48f6",
            "tags": {
              "Name": "Amazon_Linux2",
              "Owner": "Jyotsna"
            },
            "tags_all": {
              "Name": "Amazon_Linux2",
              "Owner": "Jyotsna"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a43eb7c902c8b0e6"
            ]
          },
          "dependencies": [
            "aws_network_interface.ni",
            "aws_security_group.sgroup",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230604829846:internet-gateway/igw-038186afce8ef21fd",
            "id": "igw-038186afce8ef21fd",
            "owner_id": "230604829846",
            "tags": {
              "Name": "Main-Gateway",
              "Owner": "Jyotsna"
            },
            "tags_all": {
              "Name": "Main-Gateway",
              "Owner": "Jyotsna"
            },
            "vpc_id": "vpc-08b9b675bd08f4cfe"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230604829846:network-interface/eni-0c0778df7d72ea94c",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ad0a6d822a0ae0ae",
                "device_index": 0,
                "instance": "i-0a70584ebc4e65a27"
              }
            ],
            "id": "eni-0c0778df7d72ea94c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:83:1c:0b:31:c9",
            "owner_id": "230604829846",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a43eb7c902c8b0e6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043cd8bcfd11a48f6"
          },
          "dependencies": [
            "aws_security_group.sgroup",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230604829846:route-table/rtb-0f7eef0f6b1aff046",
            "id": "rtb-0f7eef0f6b1aff046",
            "owner_id": "230604829846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038186afce8ef21fd",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038186afce8ef21fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main-RouteTable",
              "Owner": "Jyotsna"
            },
            "tags_all": {
              "Name": "Main-RouteTable",
              "Owner": "Jyotsna"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b9b675bd08f4cfe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gateway",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db8ce8d2d3fb5331",
            "route_table_id": "rtb-0f7eef0f6b1aff046",
            "subnet_id": "subnet-043cd8bcfd11a48f6"
          },
          "dependencies": [
            "aws_internet_gateway.main-gateway",
            "aws_route_table.main-rt",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230604829846:security-group/sg-0a43eb7c902c8b0e6",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a43eb7c902c8b0e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "230604829846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b9b675bd08f4cfe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230604829846:subnet/subnet-043cd8bcfd11a48f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043cd8bcfd11a48f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230604829846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main-Subnet",
              "Owner": "Jyotsna"
            },
            "tags_all": {
              "Name": "Main-Subnet",
              "Owner": "Jyotsna"
            },
            "vpc_id": "vpc-08b9b675bd08f4cfe"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230604829846:vpc/vpc-08b9b675bd08f4cfe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005dbef92705b672b",
            "default_route_table_id": "rtb-0f97417ef5ab78a90",
            "default_security_group_id": "sg-0eec9ebc4fa16b713",
            "dhcp_options_id": "dopt-0346baa4928b6db21",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08b9b675bd08f4cfe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f97417ef5ab78a90",
            "owner_id": "230604829846",
            "tags": {
              "Name": "Main-VPC",
              "Owner": "Jyotsna"
            },
            "tags_all": {
              "Name": "Main-VPC",
              "Owner": "Jyotsna"
            }
          }
        }
      ]
    }
  ]
}